--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,47 +77,47 @@ add_dependencies(show_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORT
 target_link_libraries(show_sphere ${catkin_LIBRARIES})
 
 add_executable(show_sphere_and_arrow src/show_sphere_and_arrow.cpp)
-add_dependencies(show_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(show_sphere_and_arrow ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(show_sphere_and_arrow ${catkin_LIBRARIES})
 
 add_executable(show_sphere_and_arrow_color src/show_sphere_and_arrow_color.cpp)
-add_dependencies(show_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(show_sphere_and_arrow_color ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(show_sphere_and_arrow_color ${catkin_LIBRARIES})
 
 add_executable(show_arrow src/show_arrow.cpp)
-add_dependencies(show_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(show_arrow ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(show_arrow ${catkin_LIBRARIES})
 
 add_executable(rand_pos_generator src/rand_pos_generator.cpp)
-add_dependencies(show_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(rand_pos_generator ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(rand_pos_generator ${catkin_LIBRARIES})
 
 add_executable(rand_orientation_generator src/rand_orientation_generator.cpp)
-add_dependencies(show_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(rand_orientation_generator ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(rand_orientation_generator ${catkin_LIBRARIES})
 
 add_executable(create_sphere_and_show src/create_sphere_and_show.cpp)
-add_dependencies(show_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(create_sphere_and_show ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(create_sphere_and_show sphere_discretization ${catkin_LIBRARIES})
 
 add_executable(create_discretized_sphere src/create_discretized_sphere.cpp)
-add_dependencies(show_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(create_discretized_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(create_discretized_sphere sphere_discretization ${catkin_LIBRARIES})
 
 add_executable(show_discretized_sphere src/show_discretized_sphere.cpp)
-add_dependencies(show_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(show_discretized_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(show_discretized_sphere sphere_discretization ${catkin_LIBRARIES})
 
 add_executable(create_pose_and_show src/create_pose_and_show.cpp)
-add_dependencies(show_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(create_pose_and_show ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(create_pose_and_show sphere_discretization kinematics ${catkin_LIBRARIES})
 
 add_executable(create_sphere_and_arrow src/create_sphere_and_arrow.cpp)
-add_dependencies(show_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(create_sphere_and_arrow ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(create_sphere_and_arrow sphere_discretization kinematics ${catkin_LIBRARIES})
 
 add_executable(create_sphere_and_arrow_color src/create_sphere_and_arrow_color.cpp)
-add_dependencies(show_sphere ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(create_sphere_and_arrow_color ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(create_sphere_and_arrow_color sphere_discretization kinematics ${catkin_LIBRARIES})
 
 
