--- a/map_creator/CMakeLists.txt
+++ b/map_creator/CMakeLists.txt
@@ -11,7 +11,9 @@ find_package(catkin REQUIRED COMPONENTS
   octomap_server
   tf2
   rviz_visual_tools
+  PCL
 )
+
 
 
  add_message_files(
@@ -20,6 +22,7 @@ find_package(catkin REQUIRED COMPONENTS
    capability.msg
    WsSphere.msg
    WorkSpace.msg
+   
  )
 
 
@@ -44,7 +47,7 @@ catkin_package(
 
 
 
-include_directories(include ${catkin_INCLUDE_DIRS} ${OCTOMAP_INCLUDE_DIRS} ${HDF5_INCLUDE_DIR})
+include_directories(include ${catkin_INCLUDE_DIRS} ${OCTOMAP_INCLUDE_DIRS} ${HDF5_INCLUDE_DIR} ${PCL_INCLUDE_DIR})
 
 
 
@@ -61,15 +64,17 @@ include_directories(include ${catkin_INCLUDE_DIRS} ${OCTOMAP_INCLUDE_DIRS} ${HDF
 
 
  target_link_libraries(sphere_discretization 
-   ${catkin_LIBRARIES} ${OCTOMAP_LIBRARIES}
+   ${catkin_LIBRARIES} ${OCTOMAP_LIBRARIES} ${PCL_LIBRARY_DIRS}
  )
 target_link_libraries(kinematics
    ${catkin_LIBRARIES}
  )
 
- target_link_libraries(hdf5_dataset
+target_link_libraries(hdf5_dataset
    ${catkin_LIBRARIES}
  )
+
+
 
  install(TARGETS sphere_discretization kinematics hdf5_dataset
    ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
@@ -87,37 +92,13 @@ add_executable(create_reachability_map src/create_reachability_map.cpp)
 add_dependencies(create_reachability_map ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(create_reachability_map sphere_discretization kinematics -lhdf5 -lhdf5_cpp ${catkin_LIBRARIES})
 
-add_executable(create_capability_map src/create_capability_map.cpp)
-add_dependencies(create_capability_map ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(create_capability_map sphere_discretization kinematics -lhdf5 -lhdf5_cpp ${catkin_LIBRARIES})
-
-
 add_executable(create_inverse_reachability_map src/create_inverse_reachability_map.cpp)
 add_dependencies(create_inverse_reachability_map ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(create_inverse_reachability_map sphere_discretization kinematics -lhdf5 -lhdf5_cpp hdf5_dataset ${catkin_LIBRARIES})
 
-add_executable(create_base_place_map src/create_base_place_map.cpp)
-add_dependencies(create_base_place_map ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(create_base_place_map sphere_discretization kinematics -lhdf5 -lhdf5_cpp hdf5_dataset ${catkin_LIBRARIES})
-
-add_executable(find_base_byAverage src/find_base_byAverage.cpp)
-add_dependencies(find_base_byAverage ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(find_base_byAverage sphere_discretization kinematics -lhdf5 -lhdf5_cpp hdf5_dataset ${catkin_LIBRARIES})
-
-add_executable(find_base_byPCA src/find_base_byPCA.cpp)
-add_dependencies(find_base_byPCA ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(find_base_byPCA sphere_discretization kinematics -lhdf5 -lhdf5_cpp hdf5_dataset ${catkin_LIBRARIES})
-
-add_executable(find_base_byGraspReachabilityScore src/find_base_byGraspReachabilityScore.cpp)
-add_dependencies(find_base_byGraspReachabilityScore ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(find_base_byGraspReachabilityScore sphere_discretization kinematics -lhdf5 -lhdf5_cpp hdf5_dataset ${catkin_LIBRARIES})
-
-add_executable(find_base_byIKSolutionScore src/find_base_byIKSolutionScore.cpp)
-add_dependencies(find_base_byIKSolutionScore ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(find_base_byIKSolutionScore sphere_discretization kinematics -lhdf5 -lhdf5_cpp hdf5_dataset ${catkin_LIBRARIES})
-
-
-
+add_executable(create_capability_map src/create_capability_map.cpp)
+add_dependencies(create_capability_map ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(create_capability_map sphere_discretization kinematics -lhdf5 -lhdf5_cpp ${catkin_LIBRARIES})
 
 add_executable(load_reachability_map src/load_reachability_map.cpp)
 add_dependencies(load_reachability_map ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
@@ -127,15 +108,6 @@ add_executable(load_capability_map src/load_capability_map.cpp)
 add_dependencies(load_capability_map ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(load_capability_map -lhdf5 -lhdf5_cpp hdf5_dataset ${catkin_LIBRARIES})
 
-
-
-add_executable(show_base src/show_base.cpp)
-add_dependencies(show_base ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(show_base ${catkin_LIBRARIES})
-
-add_executable(show_grasp_pose src/show_grasp_pose.cpp)
-add_dependencies(show_grasp_pose ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(show_grasp_pose ${catkin_LIBRARIES})
 
 
 
