--- a/base_placement_plugin/package.xml
+++ b/base_placement_plugin/package.xml
@@ -7,13 +7,13 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="jontromanab.abhijit@gmail.com">Abhijit Makhal</maintainer>
+  <maintainer email="makhabhi@isu.edu">Abhijit Makhal</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>BSD</license>
+  <license>Apache 2.0</license>
 
 
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
@@ -25,7 +25,7 @@
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
   <!-- Authors do not have to be maintianers, but could be -->
   <!-- Example: -->
-  <author email="jontromanab.abhijit@gmail.com">Abhijit Makhal</author>
+  <author email="makhabhi@isu.edu">Abhijit Makhal</author>
 
 
   <!-- The *_depend tags are used to specify dependencies -->
@@ -47,6 +47,7 @@
   <build_depend>rqt_gui_cpp</build_depend>
   <build_depend>rviz</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>pcl_ros</build_depend>
   
   <build_depend>tf</build_depend>
   <build_depend>tf_conversions</build_depend>
@@ -67,6 +68,7 @@
   <run_depend>tf_conversions</run_depend>
   <run_depend>yaml-cpp</run_depend>
   <run_depend>map_creator</run_depend>
+  <run_depend>pcl_ros</run_depend>
   
 
 
