--- a/map_creator/package.xml
+++ b/map_creator/package.xml
@@ -7,8 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="makhabhi@isu.edu">root</maintainer>
-
+   <maintainer email="makhabhi@isu.edu">Abhijit Makhal</maintainer>
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
@@ -25,7 +24,7 @@
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
   <!-- Authors do not have to be maintianers, but could be -->
   <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <author email="makhabhi@isu.edu">Abhijit Makhal</author>
 
 
   <!-- The *_depend tags are used to specify dependencies -->
@@ -43,18 +42,18 @@
   <build_depend>roscpp</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_depend>octomap_server</build_depend>
+  <build_depend>octomap</build_depend>
   <build_depend>tf2</build_depend>
   <build_depend>hdf5</build_depend>
-  <build_depend>PCL</build_depend>
+  <build_depend>pcl_ros</build_depend>
   
   <run_depend>roscpp</run_depend>
   <run_depend>visualization_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
-  <run_depend>octomap_server</run_depend>
+  <run_depend>octomap</run_depend>
   <run_depend>tf2</run_depend>
   <run_depend>hdf5</run_depend>
-  <run_depend>PCL</run_depend>
+  <run_depend>pcl_ros</run_depend>
   
 
   <!-- The export tag contains other, unspecified, tags -->
