--- a/workspace_visualization/package.xml
+++ b/workspace_visualization/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="makhabhi@isu.edu">root</maintainer>
+  <maintainer email="makhabhi@isu.edu">Abhijit Makhal</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -25,7 +25,7 @@
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
   <!-- Authors do not have to be maintianers, but could be -->
   <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <author email="makhabhi@isu.edu">Abhijit Makhal</author>
 
 
   <!-- The *_depend tags are used to specify dependencies -->
