Edited CMakeLists.txt and package.xml to build on Kinetic

--- a/workspace_visualization/CMakeLists.txt
+++ b/workspace_visualization/CMakeLists.txt
@@ -4,6 +4,7 @@ project(workspace_visualization)
 
 find_package(catkin REQUIRED COMPONENTS
     rviz
+    map_creator
 )
 catkin_package(INCLUDE_DIRS  )
 include_directories(include ${catkin_INCLUDE_DIRS})
