--- a/base_placement_plugin/CMakeLists.txt
+++ b/base_placement_plugin/CMakeLists.txt
@@ -2,6 +2,11 @@ cmake_minimum_required(VERSION 2.8.3)
 
 project(base_placement_plugin)
 
+#set(CMAKE_CXX_COMPILER_ID "--with-cc=/usr/bin/mpicc --with-cxx=/usr/bin/mpicxx -lmpi_cxx")
+#set(CMAKE_CXX_COMPILER "/usr/bin/mpic++.openmpi")
+#set(CMAKE_CXX_FLAGS "-Wall -g")
+set(HDF5_ROOT "/usr/lib/x86_64-linux-gnu/hdf5/openmpi")
+
 # Load catkin and all dependencies required for this package
 find_package(catkin REQUIRED COMPONENTS
   interactive_markers
@@ -17,10 +22,14 @@ find_package(catkin REQUIRED COMPONENTS
   pcl_ros
 )
 
+find_package(HDF5 REQUIRED)
+
 find_package(Qt4 COMPONENTS QtCore QtGui REQUIRED)
 
 include(${QT_USE_FILE})
 
+#link_directories(/usr/lib/x86_64-linux-gnu)
+link_directories(/usr/lib/x86_64-linux-gnu/hdf5/openmpi)
 
 add_definitions(-DQT_NO_KEYWORDS)
 
@@ -69,9 +78,10 @@ catkin_package(
 qt4_wrap_cpp(base_placement_plugin_MOCS ${base_placement_plugin_HDRS})
 qt4_wrap_ui(base_placement_plugin_UIS_H ${base_placement_plugin_UIS})
 
-include_directories(${base_placement_plugin_INCLUDE_DIRECTORIES} ${catkin_INCLUDE_DIRS})
+include_directories(${base_placement_plugin_INCLUDE_DIRECTORIES} ${catkin_INCLUDE_DIRS} ${HDF5_INCLUDE_DIRS})
 add_library(${PROJECT_NAME} ${base_placement_plugin_SRCS} ${base_placement_plugin_MOCS} ${base_placement_plugin_UIS_H}) # ${base_placement_plugin_UIS_H}
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY}  yaml-cpp -lhdf5 -lhdf5_cpp hdf5_dataset sphere_discretization kinematics )
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${HDF5_LIBRARIES} yaml-cpp -lhdf5 -lhdf5_cpp hdf5_dataset hdf5_dataset sphere_discretization kinematics)
+#target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY}  yaml-cpp -lhdf5 -lhdf5_cpp hdf5_dataset sphere_discretization kinematics )
 ## target_link_libraries(${PROJECT_NAME} yaml-cpp)
 
 find_package(class_loader)
