--- a/base_placement_plugin/package.xml
+++ b/base_placement_plugin/package.xml
@@ -48,7 +48,7 @@
   <build_depend>rviz</build_depend>
   <build_depend>visualization_msgs</build_depend>
   <build_depend>pcl_ros</build_depend>
-  
+  <build_depend>HDF5</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>tf_conversions</build_depend>
   <build_depend>yaml-cpp</build_depend>
@@ -63,7 +63,7 @@
   <run_depend>rqt_gui_cpp</run_depend>
   <run_depend>rviz</run_depend>
   <run_depend>visualization_msgs</run_depend>
-  
+  <run_depend>HDF5</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>tf_conversions</run_depend>
   <run_depend>yaml-cpp</run_depend>
