--- a/map_creator/package.xml
+++ b/map_creator/package.xml
@@ -44,16 +44,20 @@
   <build_depend>message_generation</build_depend>
   <build_depend>octomap</build_depend>
   <build_depend>tf2</build_depend>
-  <build_depend>hdf5</build_depend>
+  <build_depend>HDF5</build_depend>
   <build_depend>pcl_ros</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
   
   <run_depend>roscpp</run_depend>
   <run_depend>visualization_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>octomap</run_depend>
   <run_depend>tf2</run_depend>
-  <run_depend>hdf5</run_depend>
+  <run_depend>HDF5</run_depend>
   <run_depend>pcl_ros</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <run_depend>std_msgs</run_depend>
   
 
   <!-- The export tag contains other, unspecified, tags -->
