Fixed some bugs that caused the build to fail using 'catkin build'

--- a/workspace_visualization/CMakeLists.txt
+++ b/workspace_visualization/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(workspace_visualization)
 
-
 find_package(catkin REQUIRED COMPONENTS
     rviz
+    map_creator
 )
 catkin_package(INCLUDE_DIRS  )
 include_directories(include ${catkin_INCLUDE_DIRS})
