--- a/base_placement_plugin/CMakeLists.txt
+++ b/base_placement_plugin/CMakeLists.txt
@@ -71,7 +71,7 @@ qt4_wrap_ui(base_placement_plugin_UIS_H ${base_placement_plugin_UIS})
 
 include_directories(${base_placement_plugin_INCLUDE_DIRECTORIES} ${catkin_INCLUDE_DIRS})
 add_library(${PROJECT_NAME} ${base_placement_plugin_SRCS} ${base_placement_plugin_MOCS} ${base_placement_plugin_UIS_H}) # ${base_placement_plugin_UIS_H}
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY}  yaml-cpp -lhdf5 -lhdf5_cpp hdf5_dataset sphere_discretization kinematics )
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY}  yaml-cpp -lhdf5 -lhdf5_cpp)
 ## target_link_libraries(${PROJECT_NAME} yaml-cpp)
 
 find_package(class_loader)
