--- a/workspace_visualization/package.xml
+++ b/workspace_visualization/package.xml
@@ -43,6 +43,7 @@
   
   <build_depend>rviz</build_depend>
   <build_depend>qtbase5-dev</build_depend>
+  <build_depend>map_creator</build_depend>
 
   
   <run_depend>rviz</run_depend>
